PROJECT (volume_viewer)

IF(NOT VTK_BINARY_DIR)
FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE(${VTK_USE_FILE})
ENDIF(NOT VTK_BINARY_DIR)

SET(VOLUME_VIEWER_SRCS
)

IF(VTK_USE_METAIO)
  LIST(APPEND VOLUME_VIEWER_SRCS
    GPURenderDemo
    FixedPointVolumeRayCastMapperCT
  )
ENDIF(VTK_USE_METAIO)

IF(APPLE)
  SET(EXECUTABLE_FLAG MACOSX_BUNDLE)
ENDIF(APPLE)

FOREACH(name ${VOLUME_VIEWER_SRCS})
  ADD_EXECUTABLE(${name} ${EXECUTABLE_FLAG} ${name}.cxx)
  TARGET_LINK_LIBRARIES(${name} vtkRendering vtkIO vtkVolumeRendering vtkWidgets )
ENDFOREACH(name)



